# gwaspipe

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bump-version.py  config.yml  environment.yml  environment_dev.yml  environment_docker.yml  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
data/: formatbook.json
docs/: changelog.md  getting_started.md
examples/: config.yml  config_harmonize_VCF_sumstats.yml  config_harmonize_VCF_sumstats.yml.md  config_ldscore_pipe.yml  config_liftover_pipe.yml  config_metal.yml  config_metal_heterogeneity.yml  config_snp_mapping.yml  config_sumstats_harmonization.yml  config_sumstats_harmonization_check_ambiguous_snps.yml
src/: cistrans_tagger.py  configuring.py  gwaspipe.py  mysumstats.py  utils.py
src/gwaspipe/: __init__.py  configuring.py  gwaspipe.py  util_change_status.py  util_infer_build.py  util_order_alleles.py  utils.py
src/gwaspipe/data/: formatbook.json
src/gwaspipe/order_alleles/: __init__.py  constants.py  main.py  snpid.py  sorting.py  stats.py  vectorized.py
src/gwaspipe/utils/: __init__.py  change_status.py  infer_build.py
src/monkeypatcher/: __init__.py  format.py  harmonize.py  patcher.py  utils.py
tests/data/: test_config.yaml  test_sumstats.tsv  test_with_beta.pkl  test_with_chr_pos.pkl
tests/integration/: test_pipeline_execution.py
tests/unit/: test_configuring.py  test_configuring_properties.py  test_gwaspipe.py  test_order_alleles.py  test_order_alleles_constants.py  test_order_alleles_sorting_edge_cases.py  test_order_alleles_vectorized_edge_cases.py  test_util_order_alleles.py
