[project]
name = "gwaspipe"
version = "0.5.0"
description = "A Python tool, based on GWASLab, for assembling a computational pipeline to standardize, QC, harmonize, convert, and plot summary statistics."
authors = [
    { name = "Gianmauro Cuccuru", email = "gianmauro.cuccuru@fht.org" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "cloup (>=3.0.5,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=18.1.0,<24.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "gwaslab (==4.0.2)",
]

[project.scripts]
gwaspipe = "gwaspipe.gwaspipe:main"

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.16.0"
git-cliff = "^2.10.1"
deptry = "^0.23.1"
ruff = "^0.14.0"

[tool.poetry.group.docs.dependencies]
tomli = "^2.3.0"
tomli-w = "^1.2.0"

[tool.ruff]
line-length = 120

[tool.deptry.per_rule_ignores]
DEP001 = [
    "gwaspipe",
]
DEP002 = [
    "pyarrow",
    "pandas",
    "matplotlib",
]
DEP003 = [
    "gwaspipe",
]
DEP004 = [
    "tomli",
    "tomli_w",
]
