[project]
name = "gwaspipe"
version = "0.4.0"
description = "A Python tool, based on GWASLab, for assembling a computational pipeline to standardize, QC, harmonize, convert, and plot summary statistics."
authors = [
    { name = "Gianmauro Cuccuru", email = "gianmauro.cuccuru@fht.org" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "cloup (>=3.0.5,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=18.1.0,<24.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "gwaslab (==4.0.2)",
]

[project.scripts]
gwaspipe = "gwaspipe.gwaspipe:main"

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.16.0"
git-cliff = "^2.10.1"
deptry = "^0.23.1"
ruff = "^0.14.0"

[tool.poetry.group.docs.dependencies]
tomli = "^2.3.0"
tomli-w = "^1.2.0"

[tool.ruff]
line-length = 120

[tool.deptry.per_rule_ignores]
DEP001 = [
    "gwaspipe",
]
DEP002 = [
    "pyarrow",
    "pandas",
    "matplotlib",
]
DEP003 = [
    "gwaspipe",
]
DEP004 = [
    "tomli",
    "tomli_w",
]

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = false
require_conventional = false
split_commits = false
commit_preprocessors = []
protect_breaking_commits = false
commit_parsers = [
    { message = "^feat", group = "<!-- 0 -->🚀 Features" },
    { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
    { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
    { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
    { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
    { message = "^style", group = "<!-- 5 -->🎨 Styling" },
    { message = "^test", group = "<!-- 6 -->🧪 Testing" },
    { message = "^chore\\(release\\): prepare for", skip = true },
    { message = "^chore\\(deps.*\\)", skip = true },
    { message = "^chore\\(pr\\)", skip = true },
    { message = "^chore\\(pull\\)", skip = true },
    { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
    { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
    { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
    { message = ".*", group = "<!-- 10 -->💼 Other" },
]
filter_commits = false
link_parsers = []
use_branch_tags = false
topo_order = false
topo_order_commits = true
sort_commits = "oldest"
recurse_submodules = false
